# AeroBoreal

./: .gitignore  BSpline_curve.txt  CMakeLists.txt  checkpoint_test.txt  dash_try.py  generate_mesh_VLM.py  input.txt  main.py  mesh3d.x  mesh_fuse_horizontal.txt  mesh_fuse_horizontal.vtu  mesh_fuse_horizontal.vtu:Zone.Identifier  mesh_fuse_vertical.txt  mesh_fuse_vertical.vtu  mesh_fuse_vertical.vtu:Zone.Identifier  mesh_hstab.txt  mesh_hstab.vtu  mesh_hstab.vtu:Zone.Identifier  mesh_vstab.txt  mesh_vstab.vtu  mesh_vstab.vtu:Zone.Identifier  mesh_wing.txt  mesh_wing.vtu  mesh_wing_elliptic.txt  output_0_nx_3_ny_40.vtu  output_0_nx_3_ny_40.vtu:Zone.Identifier  output_10_nx_3_ny_40.vtu  output_10_nx_3_ny_40.vtu:Zone.Identifier  output_9_nx_2_ny_10.vtu  output_9_nx_2_ny_10.vtu:Zone.Identifier  page_euler2d.py  requirements.txt  test.q  user_inputs.csv  write_vtu.py
B_SPLINE_SOLVER/: BSpline_curve.txt  BSpline_solver.exp
B_SPLINE_SOLVER/BSpline_solver/: BSpline_solver.exp  nanobind.lib
B_SPLINE_SOLVER/wrapper/: CMakeLists.txt  bspline_wrapper.cpp
B_Spline_Solver/: BSpline_solver.lib  BSpline_solver.pyd  four_graphs.py  naca4digits.py  nanobind.lib  try.py
Calcul_structure/: Inputs.txt
Dash 3D/: testapp.py
Dash_3D/: PI4 (1).py  planevtk.py  testapp.py
Euler_site_web/: checkpoint_test.txt  euler_solver.exp  eulersite.py  input.txt  tempCodeRunnerFile.py  test.q  try.py
Meshing/: BSpline_curve.txt  input.txt  requirements.txt
SOLVEUR_COUPLE/: CMakeCache.txt  Inputs.txt  Makefile  README.md  cmake_install.cmake  generate_mesh_VLM.py  input_main.txt  launch_vlm.py  mesh_fuse_horizontal.txt  mesh_fuse_vertical.txt  mesh_fuse_vertical.vtu  mesh_hstab.txt  mesh_vstab.txt  mesh_vstab.vtu  mesh_wing.txt  mesh_wing.vtu  mesh_wing_elliptic.txt  solveur_couple.exp  solveur_couple.lib  solveur_couple.pyd  try.py  verif.py  write_vtu.py
SOLVEUR_COUPLE/Calcul_structure/: Inputs.txt
SOLVEUR_COUPLE/temp/: output_0_nx_3_ny_10.csv  output_0_nx_3_ny_10_Cl.csv  output_10_nx_3_ny_10.csv  output_10_nx_3_ny_10_Cl.csv  output_1_nx_3_ny_10.csv  output_1_nx_3_ny_10_Cl.csv  output_2_nx_3_ny_10.csv  output_2_nx_3_ny_10_Cl.csv  output_3_nx_3_ny_10.csv  output_3_nx_3_ny_10_Cl.csv  output_4_nx_3_ny_10.csv  output_4_nx_3_ny_10_Cl.csv  output_5_nx_3_ny_10.csv  output_5_nx_3_ny_10_Cl.csv  output_6_nx_3_ny_10_Cl.csv  output_7_nx_3_ny_10_Cl.csv  output_8_nx_3_ny_10.csv  output_8_nx_3_ny_10_Cl.csv  output_9_nx_3_ny_10_Cl.csv
SOLVEUR_COUPLE_PYTHON1/: generate_mesh_VLM.py  input.txt  mesh_vstab.txt  mesh_wing.txt  pts_ailes.txt  solveur_couple.exp  solveur_couple.pyd  try.py  write_vtu.py
SOLVEUR_COUPLE_PYTHON1/x.6/: mach_0.80.csv  mach_0.90.csv  mach_1.10.csv
assets/: style.css
courbes_pression/: FVM.py  Plot_cp.py  post_process.py  read_PLOT3D.py
cpp_code/: CMakeLists.txt  process_data.cpp
euler2d/: FVM.py  Generate_database.py  euler_solver.lib  euler_solver.pyd  launch_euler2d.py  post_process.py  read_PLOT3D.py
flask_env/: pyvenv.cfg
mesh/: Coupey0,0873.xyz  Coupey0,1587.xyz  Coupey0,238.xyz  Coupey0,3173.xyz  Coupey0,3967.xyz  Coupey0,476.xyz  Coupey0,5553.xyz  Coupey0,6346.xyz  Coupey0,714.xyz  Coupey0,7536.xyz  Coupey0,7933.xyz  crm_sharp_128.xyz  crm_sharp_32.xyz  crm_sharp_64.xyz  lovell_elliptic_128_r1000.xyz  lovell_elliptic_64.xyz  lovell_elliptic_64_r1000.xyz
mesh2D/: conformal_mapping.py  cst_class.py  example_conformal_mapping.py  user_inputs.csv
mesh2D/Dash_3D/: testapp.py
mesh2d/: bspline_wrapper.py  conformal_mapping.py  cst_class.py  elliptic_grid.py  example_conformal_mapping.py  example_naca4digits.py  naca4digits.py  poisson_grid_testing.py  user_inputs.csv
mesh3d/: generate_vlm_mesh.py  write_vtu.py
pages/: BSpline_solver.pyd  euler_input.txt  home.py  message.txt  page_1.py  page_2.py  page_3.py  page_euler2d.py  page_euler2d_results.py  page_mesh2d.py  page_mesh3D.py  page_pressionVLM.py  page_test.py  page_vlmstructure3D.py  vlm_input.txt
temp/: mesh.xyz  output_0_nx_3_ny_10_Cl.csv  output_10_nx_3_ny_10_Cl.csv  output_11_nx_3_ny_10_Cl.csv  output_1_nx_3_ny_10.csv  output_1_nx_3_ny_10_Cl.csv  output_2_nx_3_ny_10.csv  output_2_nx_3_ny_10_Cl.csv  output_3_nx_3_ny_10.csv  output_3_nx_3_ny_10_Cl.csv  output_4_nx_3_ny_10.csv  output_4_nx_3_ny_10_Cl.csv  output_5_nx_3_ny_10.csv  output_5_nx_3_ny_10_Cl.csv  output_6_nx_3_ny_10.csv  output_6_nx_3_ny_10_Cl.csv  output_7_nx_3_ny_10.csv  output_7_nx_3_ny_10_Cl.csv  output_8_nx_3_ny_10_Cl.csv  output_9_nx_3_ny_10_Cl.csv
website/: __init__.py  auth.py  models.py  views.py
(+194 files in other folders)
